parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    ACTUAL
    ADDEQ
    ANNOTATION
    AS
    BREAK
    BY
    CATCH
    CHAR
    CLASS
    COLON
    COMPANION
    CONST
    CONSTRUCTOR
    CONTINUE
    CROSSINLINE
    DATA
    DECREMENT
    DELIMITED_COMMENT
    DIVEQ
    DO
    DOT
    DOUBLECOLON
    DYNAMIC
    EACH
    ENUM
    EXPECT
    EXTERNAL
    FINAL
    FINALLY
    FUN
    IMPORT
    INCREMENT
    INFIX
    INIT
    INLINE
    INNER
    INTERFACE
    INTERNAL
    IS
    LATEINIT
    LBRACK
    LINE_COMMENT
    LIST
    MAP
    MODEQ
    MODULE
    MULTEQ
    NOINLINE
    NOT
    NOT_IN
    NOT_IS
    NULL
    OBJECT
    OF
    OPEN
    OPERATOR
    OUT
    OVERRIDE
    PACKAGE
    PRIVATE
    PROTECTED
    PUBLIC
    RBRACK
    REIFIED
    RETURN
    SEALED
    SEMICOLON
    SHEBANG
    SUBEQ
    SUPER
    SUSPEND
    TAILREC
    THEN
    THIS
    THROW
    TRY
    TYPEDATA
    TYPEOF
    TYPE_ALIAS
    UNIT
    VARARG
    WHERE
    WS

Grammar

Rule 0     S' -> statement_list
Rule 1     statement_list -> statement
Rule 2     statement_list -> statement_list statement
Rule 3     statement -> assignment
Rule 4     statement -> expression
Rule 5     statement -> print
Rule 6     statement -> input
Rule 7     statement -> repeat
Rule 8     statement -> condition
Rule 9     statement -> loop
Rule 10    statement -> range
Rule 11    statement -> data_structure
Rule 12    assignment -> VAR ID ASSIGN expression
Rule 13    assignment -> VAL ID ASSIGN expression
Rule 14    expression -> expression PLUS expression
Rule 15    expression -> expression MINUS expression
Rule 16    expression -> expression TIMES expression
Rule 17    expression -> expression DIVIDE expression
Rule 18    expression -> expression MOD expression
Rule 19    expression -> expression EQEQ expression
Rule 20    expression -> expression NOTEQ expression
Rule 21    expression -> expression LT expression
Rule 22    expression -> expression LTEQ expression
Rule 23    expression -> expression GT expression
Rule 24    expression -> expression GTEQ expression
Rule 25    expression -> expression AND expression
Rule 26    expression -> expression OR expression
Rule 27    expression -> LPAREN expression RPAREN
Rule 28    expression -> NUMBER
Rule 29    expression -> FLOAT
Rule 30    expression -> DOUBLE
Rule 31    expression -> BOOLEAN
Rule 32    expression -> STRING
Rule 33    expression -> ID
Rule 34    range -> NUMBER RANGE NUMBER
Rule 35    print -> PRINTLN LPAREN argument_list RPAREN
Rule 36    print -> PRINT LPAREN argument_list RPAREN
Rule 37    argument_list -> expression
Rule 38    argument_list -> expression COMMA expression
Rule 39    argument_list -> argument_list COMMA expression
Rule 40    argument_list -> empty
Rule 41    input -> READLINE LPAREN RPAREN
Rule 42    repeat -> REPEAT LPAREN expression RPAREN LBRACE statement_list RBRACE
Rule 43    condition -> IF expression LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
Rule 44    condition -> IF expression LBRACE statement_list RBRACE
Rule 45    loop -> WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
Rule 46    loop -> FOR LPAREN ID IN data_structure RPAREN LBRACE statement_list RBRACE
Rule 47    loop -> FOR LPAREN ID IN range RPAREN LBRACE statement_list RBRACE
Rule 48    condition -> WHEN LPAREN expression RPAREN LBRACE when_cases RBRACE
Rule 49    when_cases -> when_case
Rule 50    when_cases -> when_cases when_case
Rule 51    when_case -> expression_list ARROW statement_list
Rule 52    when_case -> ELSE ARROW statement_list
Rule 53    expression_list -> expression
Rule 54    expression_list -> expression_list COMMA expression
Rule 55    data_structure -> LISTOF LPAREN argument_list RPAREN
Rule 56    data_structure -> MAPOF LPAREN map_argument_list RPAREN
Rule 57    data_structure -> SETOF LPAREN argument_list RPAREN
Rule 58    map_argument_list -> map_element
Rule 59    map_argument_list -> map_argument_list COMMA map_element
Rule 60    map_element -> expression TO expression
Rule 61    type -> ID
Rule 62    empty -> <empty>

Terminals, with rules where they appear

ABSTRACT             : 
ACTUAL               : 
ADDEQ                : 
AND                  : 25
ANNOTATION           : 
ARROW                : 51 52
AS                   : 
ASSIGN               : 12 13
BOOLEAN              : 31
BREAK                : 
BY                   : 
CATCH                : 
CHAR                 : 
CLASS                : 
COLON                : 
COMMA                : 38 39 54 59
COMPANION            : 
CONST                : 
CONSTRUCTOR          : 
CONTINUE             : 
CROSSINLINE          : 
DATA                 : 
DECREMENT            : 
DELIMITED_COMMENT    : 
DIVEQ                : 
DIVIDE               : 17
DO                   : 
DOT                  : 
DOUBLE               : 30
DOUBLECOLON          : 
DYNAMIC              : 
EACH                 : 
ELSE                 : 43 52
ENUM                 : 
EQEQ                 : 19
EXPECT               : 
EXTERNAL             : 
FINAL                : 
FINALLY              : 
FLOAT                : 29
FOR                  : 46 47
FUN                  : 
GT                   : 23
GTEQ                 : 24
ID                   : 12 13 33 46 47 61
IF                   : 43 44
IMPORT               : 
IN                   : 46 47
INCREMENT            : 
INFIX                : 
INIT                 : 
INLINE               : 
INNER                : 
INTERFACE            : 
INTERNAL             : 
IS                   : 
LATEINIT             : 
LBRACE               : 42 43 43 44 45 46 47 48
LBRACK               : 
LINE_COMMENT         : 
LIST                 : 
LISTOF               : 55
LPAREN               : 27 35 36 41 42 45 46 47 48 55 56 57
LT                   : 21
LTEQ                 : 22
MAP                  : 
MAPOF                : 56
MINUS                : 15
MOD                  : 18
MODEQ                : 
MODULE               : 
MULTEQ               : 
NOINLINE             : 
NOT                  : 
NOTEQ                : 20
NOT_IN               : 
NOT_IS               : 
NULL                 : 
NUMBER               : 28 34 34
OBJECT               : 
OF                   : 
OPEN                 : 
OPERATOR             : 
OR                   : 26
OUT                  : 
OVERRIDE             : 
PACKAGE              : 
PLUS                 : 14
PRINT                : 36
PRINTLN              : 35
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 
RANGE                : 34
RBRACE               : 42 43 43 44 45 46 47 48
RBRACK               : 
READLINE             : 41
REIFIED              : 
REPEAT               : 42
RETURN               : 
RPAREN               : 27 35 36 41 42 45 46 47 48 55 56 57
SEALED               : 
SEMICOLON            : 
SETOF                : 57
SHEBANG              : 
STRING               : 32
SUBEQ                : 
SUPER                : 
SUSPEND              : 
TAILREC              : 
THEN                 : 
THIS                 : 
THROW                : 
TIMES                : 16
TO                   : 60
TRY                  : 
TYPEDATA             : 
TYPEOF               : 
TYPE_ALIAS           : 
UNIT                 : 
VAL                  : 13
VAR                  : 12
VARARG               : 
WHEN                 : 48
WHERE                : 
WHILE                : 45
WS                   : 
error                : 

Nonterminals, with rules where they appear

argument_list        : 35 36 39 55 57
assignment           : 3
condition            : 8
data_structure       : 11 46
empty                : 40
expression           : 4 12 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 37 38 38 39 42 43 44 45 48 53 54 60 60
expression_list      : 51 54
input                : 6
loop                 : 9
map_argument_list    : 56 59
map_element          : 58 59
print                : 5
range                : 10 47
repeat               : 7
statement            : 1 2
statement_list       : 2 42 43 43 44 45 46 47 51 52 0
type                 : 
when_case            : 49 50
when_cases           : 48 50

Parsing method: LALR

state 0

    (0) S' -> . statement_list
    (1) statement_list -> . statement
    (2) statement_list -> . statement_list statement
    (3) statement -> . assignment
    (4) statement -> . expression
    (5) statement -> . print
    (6) statement -> . input
    (7) statement -> . repeat
    (8) statement -> . condition
    (9) statement -> . loop
    (10) statement -> . range
    (11) statement -> . data_structure
    (12) assignment -> . VAR ID ASSIGN expression
    (13) assignment -> . VAL ID ASSIGN expression
    (14) expression -> . expression PLUS expression
    (15) expression -> . expression MINUS expression
    (16) expression -> . expression TIMES expression
    (17) expression -> . expression DIVIDE expression
    (18) expression -> . expression MOD expression
    (19) expression -> . expression EQEQ expression
    (20) expression -> . expression NOTEQ expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression LTEQ expression
    (23) expression -> . expression GT expression
    (24) expression -> . expression GTEQ expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . FLOAT
    (30) expression -> . DOUBLE
    (31) expression -> . BOOLEAN
    (32) expression -> . STRING
    (33) expression -> . ID
    (35) print -> . PRINTLN LPAREN argument_list RPAREN
    (36) print -> . PRINT LPAREN argument_list RPAREN
    (41) input -> . READLINE LPAREN RPAREN
    (42) repeat -> . REPEAT LPAREN expression RPAREN LBRACE statement_list RBRACE
    (43) condition -> . IF expression LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (44) condition -> . IF expression LBRACE statement_list RBRACE
    (48) condition -> . WHEN LPAREN expression RPAREN LBRACE when_cases RBRACE
    (45) loop -> . WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
    (46) loop -> . FOR LPAREN ID IN data_structure RPAREN LBRACE statement_list RBRACE
    (47) loop -> . FOR LPAREN ID IN range RPAREN LBRACE statement_list RBRACE
    (34) range -> . NUMBER RANGE NUMBER
    (55) data_structure -> . LISTOF LPAREN argument_list RPAREN
    (56) data_structure -> . MAPOF LPAREN map_argument_list RPAREN
    (57) data_structure -> . SETOF LPAREN argument_list RPAREN

    VAR             shift and go to state 12
    VAL             shift and go to state 14
    LPAREN          shift and go to state 15
    NUMBER          shift and go to state 16
    FLOAT           shift and go to state 17
    DOUBLE          shift and go to state 18
    BOOLEAN         shift and go to state 19
    STRING          shift and go to state 20
    ID              shift and go to state 13
    PRINTLN         shift and go to state 21
    PRINT           shift and go to state 22
    READLINE        shift and go to state 23
    REPEAT          shift and go to state 24
    IF              shift and go to state 25
    WHEN            shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28
    LISTOF          shift and go to state 29
    MAPOF           shift and go to state 30
    SETOF           shift and go to state 31

    statement_list                 shift and go to state 1
    statement                      shift and go to state 2
    assignment                     shift and go to state 3
    expression                     shift and go to state 4
    print                          shift and go to state 5
    input                          shift and go to state 6
    repeat                         shift and go to state 7
    condition                      shift and go to state 8
    loop                           shift and go to state 9
    range                          shift and go to state 10
    data_structure                 shift and go to state 11

state 1

    (0) S' -> statement_list .
    (2) statement_list -> statement_list . statement
    (3) statement -> . assignment
    (4) statement -> . expression
    (5) statement -> . print
    (6) statement -> . input
    (7) statement -> . repeat
    (8) statement -> . condition
    (9) statement -> . loop
    (10) statement -> . range
    (11) statement -> . data_structure
    (12) assignment -> . VAR ID ASSIGN expression
    (13) assignment -> . VAL ID ASSIGN expression
    (14) expression -> . expression PLUS expression
    (15) expression -> . expression MINUS expression
    (16) expression -> . expression TIMES expression
    (17) expression -> . expression DIVIDE expression
    (18) expression -> . expression MOD expression
    (19) expression -> . expression EQEQ expression
    (20) expression -> . expression NOTEQ expression
    (21) expression -> . expression LT expression
    (22) expression -> . expression LTEQ expression
    (23) expression -> . expression GT expression
    (24) expression -> . expression GTEQ expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . FLOAT
    (30) expression -> . DOUBLE
    (31) expression -> . BOOLEAN
    (32) expression -> . STRING
    (33) expression -> . ID
    (35) print -> . PRINTLN LPAREN argument_list RPAREN
    (36) print -> . PRINT LPAREN argument_list RPAREN
    (41) input -> . READLINE LPAREN RPAREN
    (42) repeat -> . REPEAT LPAREN expression RPAREN LBRACE statement_list RBRACE
    (43) condition -> . IF expression LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (44) condition -> . IF expression LBRACE statement_list RBRACE
    (48) condition -> . WHEN LPAREN expression RPAREN LBRACE when_cases RBRACE
    (45) loop -> . WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
    (46) loop -> . FOR LPAREN ID IN data_structure RPAREN LBRACE statement_list RBRACE
    (47) loop -> . FOR LPAREN ID IN range RPAREN LBRACE statement_list RBRACE
    (34) range -> . NUMBER RANGE NUMBER
    (55) data_structure -> . LISTOF LPAREN argument_list RPAREN
    (56) data_structure -> . MAPOF LPAREN map_argument_list RPAREN
    (57) data_structure -> . SETOF LPAREN argument_list RPAREN

    VAR             shift and go to state 12
    VAL             shift and go to state 14
    LPAREN          shift and go to state 15
    NUMBER          shift and go to state 16
    FLOAT           shift and go to state 17
    DOUBLE          shift and go to state 18
    BOOLEAN         shift and go to state 19
    STRING          shift and go to state 20
    ID              shift and go to state 13
    PRINTLN         shift and go to state 21
    PRINT           shift and go to state 22
    READLINE        shift and go to state 23
    REPEAT          shift and go to state 24
    IF              shift and go to state 25
    WHEN            shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28
    LISTOF          shift and go to state 29
    MAPOF           shift and go to state 30
    SETOF           shift and go to state 31

    statement                      shift and go to state 32
    assignment                     shift and go to state 3
    expression                     shift and go to state 4
    print                          shift and go to state 5
    input                          shift and go to state 6
    repeat                         shift and go to state 7
    condition                      shift and go to state 8
    loop                           shift and go to state 9
    range                          shift and go to state 10
    data_structure                 shift and go to state 11

state 2

    (1) statement_list -> statement .

    VAR             reduce using rule 1 (statement_list -> statement .)
    VAL             reduce using rule 1 (statement_list -> statement .)
    LPAREN          reduce using rule 1 (statement_list -> statement .)
    NUMBER          reduce using rule 1 (statement_list -> statement .)
    FLOAT           reduce using rule 1 (statement_list -> statement .)
    DOUBLE          reduce using rule 1 (statement_list -> statement .)
    BOOLEAN         reduce using rule 1 (statement_list -> statement .)
    STRING          reduce using rule 1 (statement_list -> statement .)
    ID              reduce using rule 1 (statement_list -> statement .)
    PRINTLN         reduce using rule 1 (statement_list -> statement .)
    PRINT           reduce using rule 1 (statement_list -> statement .)
    READLINE        reduce using rule 1 (statement_list -> statement .)
    REPEAT          reduce using rule 1 (statement_list -> statement .)
    IF              reduce using rule 1 (statement_list -> statement .)
    WHEN            reduce using rule 1 (statement_list -> statement .)
    WHILE           reduce using rule 1 (statement_list -> statement .)
    FOR             reduce using rule 1 (statement_list -> statement .)
    LISTOF          reduce using rule 1 (statement_list -> statement .)
    MAPOF           reduce using rule 1 (statement_list -> statement .)
    SETOF           reduce using rule 1 (statement_list -> statement .)
    $end            reduce using rule 1 (statement_list -> statement .)
    RBRACE          reduce using rule 1 (statement_list -> statement .)
    ELSE            reduce using rule 1 (statement_list -> statement .)


state 3

    (3) statement -> assignment .

    VAR             reduce using rule 3 (statement -> assignment .)
    VAL             reduce using rule 3 (statement -> assignment .)
    LPAREN          reduce using rule 3 (statement -> assignment .)
    NUMBER          reduce using rule 3 (statement -> assignment .)
    FLOAT           reduce using rule 3 (statement -> assignment .)
    DOUBLE          reduce using rule 3 (statement -> assignment .)
    BOOLEAN         reduce using rule 3 (statement -> assignment .)
    STRING          reduce using rule 3 (statement -> assignment .)
    ID              reduce using rule 3 (statement -> assignment .)
    PRINTLN         reduce using rule 3 (statement -> assignment .)
    PRINT           reduce using rule 3 (statement -> assignment .)
    READLINE        reduce using rule 3 (statement -> assignment .)
    REPEAT          reduce using rule 3 (statement -> assignment .)
    IF              reduce using rule 3 (statement -> assignment .)
    WHEN            reduce using rule 3 (statement -> assignment .)
    WHILE           reduce using rule 3 (statement -> assignment .)
    FOR             reduce using rule 3 (statement -> assignment .)
    LISTOF          reduce using rule 3 (statement -> assignment .)
    MAPOF           reduce using rule 3 (statement -> assignment .)
    SETOF           reduce using rule 3 (statement -> assignment .)
    $end            reduce using rule 3 (statement -> assignment .)
    RBRACE          reduce using rule 3 (statement -> assignment .)
    ELSE            reduce using rule 3 (statement -> assignment .)


state 4

    (4) statement -> expression .
    (14) expression -> expression . PLUS expression
    (15) expression -> expression . MINUS expression
    (16) expression -> expression . TIMES expression
    (17) expression -> expression . DIVIDE expression
    (18) expression -> expression . MOD expression
    (19) expression -> expression . EQEQ expression
    (20) expression -> expression . NOTEQ expression
    (21) expression -> expression . LT expression
    (22) expression -> expression . LTEQ expression
    (23) expression -> expression . GT expression
    (24) expression -> expression . GTEQ expression
    (25) expression -> expression . AND expression
    (26) expression -> expression . OR expression

    VAR             reduce using rule 4 (statement -> expression .)
    VAL             reduce using rule 4 (statement -> expression .)
    LPAREN          reduce using rule 4 (statement -> expression .)
    NUMBER          reduce using rule 4 (statement -> expression .)
    FLOAT           reduce using rule 4 (statement -> expression .)
    DOUBLE          reduce using rule 4 (statement -> expression .)
    BOOLEAN         reduce using rule 4 (statement -> expression .)
    STRING          reduce using rule 4 (statement -> expression .)
    ID              reduce using rule 4 (statement -> expression .)
    PRINTLN         reduce using rule 4 (statement -> expression .)
    PRINT           reduce using rule 4 (statement -> expression .)
    READLINE        reduce using rule 4 (statement -> expression .)
    REPEAT          reduce using rule 4 (statement -> expression .)
    IF              reduce using rule 4 (statement -> expression .)
    WHEN            reduce using rule 4 (statement -> expression .)
    WHILE           reduce using rule 4 (statement -> expression .)
    FOR             reduce using rule 4 (statement -> expression .)
    LISTOF          reduce using rule 4 (statement -> expression .)
    MAPOF           reduce using rule 4 (statement -> expression .)
    SETOF           reduce using rule 4 (statement -> expression .)
    $end            reduce using rule 4 (statement -> expression .)
    RBRACE          reduce using rule 4 (statement -> expression .)
    ELSE            reduce using rule 4 (statement -> expression .)
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34
    TIMES           shift and go to state 35
    DIVIDE          shift and go to state 36
    MOD             shift and go to state 37
    EQEQ            shift and go to state 38
    NOTEQ           shift and go to state 39
    LT              shift and go to state 40
    LTEQ            shift and go to state 41
    GT              shift and go to state 42
    GTEQ            shift and go to state 43
    AND             shift and go to state 44
    OR              shift and go to state 45


state 5

    (5) statement -> print .

    VAR             reduce using rule 5 (statement -> print .)
    VAL             reduce using rule 5 (statement -> print .)
    LPAREN          reduce using rule 5 (statement -> print .)
    NUMBER          reduce using rule 5 (statement -> print .)
    FLOAT           reduce using rule 5 (statement -> print .)
    DOUBLE          reduce using rule 5 (statement -> print .)
    BOOLEAN         reduce using rule 5 (statement -> print .)
    STRING          reduce using rule 5 (statement -> print .)
    ID              reduce using rule 5 (statement -> print .)
    PRINTLN         reduce using rule 5 (statement -> print .)
    PRINT           reduce using rule 5 (statement -> print .)
    READLINE        reduce using rule 5 (statement -> print .)
    REPEAT          reduce using rule 5 (statement -> print .)
    IF              reduce using rule 5 (statement -> print .)
    WHEN            reduce using rule 5 (statement -> print .)
    WHILE           reduce using rule 5 (statement -> print .)
    FOR             reduce using rule 5 (statement -> print .)
    LISTOF          reduce using rule 5 (statement -> print .)
    MAPOF           reduce using rule 5 (statement -> print .)
    SETOF           reduce using rule 5 (statement -> print .)
    $end            reduce using rule 5 (statement -> print .)
    RBRACE          reduce using rule 5 (statement -> print .)
    ELSE            reduce using rule 5 (statement -> print .)


state 6

    (6) statement -> input .

    VAR             reduce using rule 6 (statement -> input .)
    VAL             reduce using rule 6 (statement -> input .)
    LPAREN          reduce using rule 6 (statement -> input .)
    NUMBER          reduce using rule 6 (statement -> input .)
    FLOAT           reduce using rule 6 (statement -> input .)
    DOUBLE          reduce using rule 6 (statement -> input .)
    BOOLEAN         reduce using rule 6 (statement -> input .)
    STRING          reduce using rule 6 (statement -> input .)
    ID              reduce using rule 6 (statement -> input .)
    PRINTLN         reduce using rule 6 (statement -> input .)
    PRINT           reduce using rule 6 (statement -> input .)
    READLINE        reduce using rule 6 (statement -> input .)
    REPEAT          reduce using rule 6 (statement -> input .)
    IF              reduce using rule 6 (statement -> input .)
    WHEN            reduce using rule 6 (statement -> input .)
    WHILE           reduce using rule 6 (statement -> input .)
    FOR             reduce using rule 6 (statement -> input .)
    LISTOF          reduce using rule 6 (statement -> input .)
    MAPOF           reduce using rule 6 (statement -> input .)
    SETOF           reduce using rule 6 (statement -> input .)
    $end            reduce using rule 6 (statement -> input .)
    RBRACE          reduce using rule 6 (statement -> input .)
    ELSE            reduce using rule 6 (statement -> input .)


state 7

    (7) statement -> repeat .
